--- a/index.html
+++ b/index.html
@@ -14,39 +14,9 @@
   <div class="nav-bar"></div>
 
   <div id="app">
-   <div class="product">
-   
-    <div class="product-image">
-      <img :src="image" :alt="altText">
-    </div>
-
-    <div class="product-info">
-      
-      <h1>{{ title }}</h1>
-      <p v-if="inStock">In Stock</p>
-      <p v-else="inStock" :class="{ outOfStock: !inStock }">Out of Stock</p>
-      <ul>
-        <li v-for="detail in details">{{ detail }}</li>
-      </ul>
-
-      <div v-for="variant in variants" 
-          :key="variant.variantId"
-          class="color-box"
-          :style="{ backgroundColor: variant.variantColor }"
-          @mouseover="updateProduct(variant.variantImage)">
-      </div>
-
-      <button v-on:click="addToCart" 
-              :disabled="!inStock"
-              :class="{ disabledButton: !inStock }" >Add to Cart</button>
-
-      <div class="cart">
-        <p>Cart({{cart}})</p>
-      </div>
-
-    </div>
-
-   </div>
+    <product></product>
+    <product></product>
+    <product></product>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
