--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
   <div class="nav-bar"></div>
 
   <div id="app">
-    <product></product>
-    <product></product>
-    <product></product>
+
+    <div class="cart">
+      <p>Cart({{cart.length}})</p>
+    </div>
+    
+    <product :premium="premium" @add-to-cart="updateCart"></product>
+    <product @add-to-cart="updateCart"></product>
+
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
